<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/itemData" android:title="@string/data" android:visible="true" android:enabled="true" android:alphabeticShortcut="@string/data" android:orderInCategory="2">
        <menu>
            <item android:id="@+id/itemExport" android:title="@string/export_data"/>
            <item android:id="@+id/itemImport" android:title="@string/import_data"/>
            <item android:id="@+id/itemRemove" android:title="@string/remove"/>
        </menu>
    </item>
    <item android:id="@+id/itemAbout" android:title="@string/about" android:visible="true" android:enabled="true" android:alphabeticShortcut="@string/about" android:orderInCategory="2"></item>
    <item android:id="@+id/itemSuggestion" android:title="@string/suggestion" android:visible="true" android:enabled="true" android:alphabeticShortcut="@string/suggestion" android:orderInCategory="2"></item>
    

</menu>